--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+body {
+    // background: rgb(2, 0, 36);
+    // background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(12, 0, 142, 1) 70%, rgba(0, 212, 255, 1) 100%);
+    min-height: 100vh;
+}
+
+.cur-p {
+    cursor: pointer;
+}
