--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div [ngClass]="currentColor" class="height-100vh">
+  <app-header (selectColor)="selectColor($event)"></app-header>
+  <router-outlet></router-outlet>
+</div>
+
 <!-- <app-footer></app-footer> -->
