--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -1,6 +1,6 @@
-body {
-    background: #007bff;
-    background: linear-gradient(to right, #0062E6, #33AEFF);
+.container {
+    // background: #007bff;
+    // background: linear-gradient(to right, #0062E6, #33AEFF);
 }
 
 .btn-login {
