--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@import "@angular/material/theming";
+@include mat.core();
+
 @import "~bootstrap/dist/css/bootstrap.css";
 
+// @import "./styles/mixins";
+@import "./styles/_themes";
+
+
+
+
+
 body {
-    // background: rgb(2, 0, 36);
     // background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(12, 0, 142, 1) 70%, rgba(0, 212, 255, 1) 100%);
-    min-height: 100vh;
 }
 
 .cur-p {
     cursor: pointer;
+}
+
+p {
+    padding: 0;
+    margin: 0;
+}
+
+.remove-bullets-li {
+    list-style-type: none;
+}
+
+.copy-to-clipboard-container {
+    position: relative;
+}
+
+nav {
+    width: 100%;
+}
+
+.height-100vh {
+    min-height: calc(100vh - 15px);
 }
